fix: update button and nav text colors for dark mode

--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -18,6 +18,10 @@
     color: var(--inverted-text-color);
     outline: none;
     width: calc(100%);
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--text-color);
+    }
   }
 
   [for='banner-control'] {
@@ -59,7 +63,6 @@
     label {
       align-items: center;
       border: none;
-      box-shadow: none !important;
       color: var(--text-color);
       cursor: pointer;
       display: flex;
